# youtube_trending2

./: .gitignore  Best_Shows.csv  Best_shows_df.csv  README.md  YT_trending_movies.csv  app.py  helpers.py  main.py  pyproject.toml  requirements.txt
helpers/: read_config.py
