[tool.poetry]
name = "testing"
version = "0.1.0"
description = "scraping youTube"
authors = ["Dan Nelson <danelson@nwi.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.8.0"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
