[tool.poetry]
name = "working_with_selenium"
version = "0.1.0"
description = ""
authors = ["Dan Nelson <danelson@nwi.net>"]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.0"
bs4 = "^0.0.1"
chromedriver-autoinstaller = "^0.4.0"
geckodriver-autoinstaller = "^0.1.0"
requests = "^2.28.2"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
